--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <button onclick="findTable()">Search</button>
   <div class="result" id="result"></div>
 
+  <button onclick="showGuestsPerTbale()">Show All Guests by Table</button>
+
   <script src="script.js"></script>
 </body>
 </html>
